# ai-docs

./: .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  chat.py  chunker.py  config.py  repositories.py  tokenizer.py
src/cli/: __init__.py  chat.py  knowledge.py  options.py
